Initial stages of adding "weather page" and weather API to project.

--- a/cheese-mvc/src/main/resources/templates/fragments.html
+++ b/cheese-mvc/src/main/resources/templates/fragments.html
@@ -15,6 +15,7 @@
     <a href="/MyMVC">Home</a>
     <a href="/MyMVC/list">List</a>
     <a href="/MyMVC/add">Add</a>
+    <a href="/MyMVC/weather">Weather</a>
 </nav>
 
 </body>
