Update for CRUD functionality. Allowing user to add an Employee to the table and reflecting the information on the "employee-data" View.

--- a/cheese-mvc/src/main/resources/templates/MyMVC/index.html
+++ b/cheese-mvc/src/main/resources/templates/MyMVC/index.html
@@ -8,9 +8,8 @@
 
 <p>If you are reading this. Thank you for checking out my project.</p>
 <hr>
-<p>This project was created with the intention and overall goal of familiarizing myself with the Spring Framework.<br>
+<p>This project was created with the intention and overall goal of familiarizing myself with the Spring Framework. (Specifically back-end)<br>
  While the project is simple, it has greatly deepened my understanding of the many components of a SpringBoot project. <br>
-</p>
 
 </body>
 </html>
