--- a/cheese-mvc/src/main/resources/templates/fragments.html
+++ b/cheese-mvc/src/main/resources/templates/fragments.html
@@ -15,7 +15,8 @@
     <a href="/MyMVC">Home</a>
     <a href="/MyMVC/list">List</a>
     <a href="/MyMVC/add">Add</a>
-    <a href="/MyMVC/weather">Weather</a>
+    <a href="/MyMVC/employee-data">Employee Data</a>
+    <a href="/MyMVC/crud">Add An Employee(CRUD)</a>
 </nav>
 
 </body>
