Delete Button Functionality
Successfully deletes Employee-Object from the ArrayList.

Problems:
- Reflect changes in "employee-data" View.

--- a/cheese-mvc/src/main/resources/templates/MyMVC/crud.html
+++ b/cheese-mvc/src/main/resources/templates/MyMVC/crud.html
@@ -11,19 +11,24 @@
 
 
 <form method="post">
-
-    <label for="empID">Employee ID:</label>
-    <input type="text" id="empID" name="employeeID"/>
-
-    <label for="firstName">First Name:</label>
-    <input type="text" id="firstName" name="firstName"/>
-
-    <label for="lastName">Last Name:</label>
-    <input type="text" id="lastName" name="lastName"/>
-
-
+    <table>
+        <tr>
+            <td>
+                EmployeeID: <input type="text" name="employeeID"/>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                First Name: <input type="text"  name="firstName"/>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Last Name: <input type="text" name="lastName"/>
+            </td>
+        </tr>
+    </table>
     <input type="submit" value="Add Employee"/>
-
 </form>
 
 </body>
