--- a/cheese-mvc/src/main/resources/templates/MyMVC/employee-data.html
+++ b/cheese-mvc/src/main/resources/templates/MyMVC/employee-data.html
@@ -27,12 +27,12 @@
         <th>Lastname</th>
     </tr>
     <tr th:each="employee: ${employees}">
-        <td th:text="${employee.employeeID}"></td>
+        <td th:text=${employee.employeeID}"></td>
         <td th:text="${employee.firstName}"></td>
         <td th:text="${employee.lastName}"></td>
         <td><input type="submit" value="Update"/></td>
         <td>
-            <form th:action="@{delete-emp/{e1}(e1=${employee.getEmployeeID})}" method="post">
+            <form th:action="@{delete-emp/{e1}(e1=${employee.getEmployeeID})}">
                 <input type="submit" value="Delete"/>
             </form>
         </td>
@@ -42,6 +42,5 @@
 
 
 </body>
-
 
 </html>
