Delete Button Functionality
Successfully deletes Employee-Object from the ArrayList.

Corrected Parsing Error

Problems:
- Reflect changes in "employee-data" View.

--- a/cheese-mvc/src/main/resources/templates/MyMVC/employee-data.html
+++ b/cheese-mvc/src/main/resources/templates/MyMVC/employee-data.html
@@ -27,7 +27,7 @@
         <th>Lastname</th>
     </tr>
     <tr th:each="employee: ${employees}">
-        <td th:text=${employee.employeeID}"></td>
+        <td th:text="${employee.employeeID}"></td>
         <td th:text="${employee.firstName}"></td>
         <td th:text="${employee.lastName}"></td>
         <td><input type="submit" value="Update"/></td>
