Delete Button Functionality
Converted RequestMethod to POST for and fixed URL path for after deleting Employee-Objects from View

Problems:
- Reflect changes in "employee-data" View.

--- a/cheese-mvc/src/main/resources/templates/MyMVC/employee-data.html
+++ b/cheese-mvc/src/main/resources/templates/MyMVC/employee-data.html
@@ -32,7 +32,7 @@
         <td th:text="${employee.lastName}"></td>
         <td><input type="submit" value="Update"/></td>
         <td>
-            <form th:action="@{delete-emp/{e1}(e1=${employee.getEmployeeID})}">
+            <form th:action="@{employee-data}" th:object="${employee}" method="post">
                 <input type="submit" value="Delete"/>
             </form>
         </td>
