Delete Button Functionality
Converted RequestMethod to POST for and fixed URL path for after deleting Employee-Objects from View

Problems:
- Reflect changes in "employee-data" View (Table).

--- a/cheese-mvc/src/main/resources/templates/MyMVC/employee-data.html
+++ b/cheese-mvc/src/main/resources/templates/MyMVC/employee-data.html
@@ -6,7 +6,7 @@
 <head th:replace="fragments :: head"></head></head>
 
 
-<body>
+<body onload="Javascript:AutoRefresh()">
 <h1 th:text="${pageTitle}"></h1>
 
 <nav th:replace="fragments :: navigation"></nav>
