--- a/cheese-mvc/src/main/resources/templates/fragments.html
+++ b/cheese-mvc/src/main/resources/templates/fragments.html
@@ -6,7 +6,8 @@
     <title th:text="${tabTitle}">My Cheeses</title>
 
     <link rel="stylesheet" th:href="@{/css/styles.css}"/>
-    <script type="text/javascript" th:src="@{/js/script.js}"></script>
+    <script type="text/Javascript" th:src="@{/js/script.js}"></script>
+
 </head>
 
 <body>
